# LaDistorneta

./: .gitignore  CMakeLists.txt  UI_brief.md  make_pkg.sh
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ui.html  ui.html.bak_bundler
installer/: LaDistorneta.iss
player_badges/: _params.json
